--- a/Muhasebe/View/OrderForm/index.html
+++ b/Muhasebe/View/OrderForm/index.html
@@ -23,22 +23,22 @@
         <div class="main">
             <div class="author">
                 <div class="header">Firma Yetkilisi</div>
-                <span>Mustafa YILDIZ</span>
-                <span>Pozisyon: İşyeri Sahibi</span>
-                <span>Gsm: 05414354339</span>
-                <span>Email: info@daflan.com</span>
+                <span>{AUTHOR-NAME}</span>
+                <span>Pozisyon: {AUTHOR-POSITION}</span>
+                <span>Gsm: {AUTHOR-GSM}</span>
+                <span>Email: {AUTHOR-EMAIL}</span>
             </div>
             <div class="attn">
                 <div class="header">İlgilinin Dikkatine</div>
                 <span>Sayın <b>{ATTN-NAME}</b> dikkatine;</span>
-                <span>Aşağıda belirtmiş olduğumuz ürünler hakkında bilgi/fiyat talep ediyoruz.</span>
+                <span>{ATTN-NOTE}</span>
                 <span>Saygılarımızla</span>
             </div>
             <div class="author form-details">
                 <div class="header">Form Detayı</div>
-                <span>Form No: 123</span>
+                <span>Form No: {ORDER-ID}</span>
                 <span>Tür: Sipariş Talep Formu</span>
-                <span>Geçerlilik Süresi: 20.10.2016 - 30.10.2016</span>
+                <span>Geçerlilik Süresi: -</span>
             </div>
             <div class="products">
                 <div class="column-names">
@@ -50,7 +50,7 @@
                 </div>
                 <table>
                     <tbody>
-                        <tr class="item">
+                        <!--<tr class="item">
                             <td class="pro-img"><img src="{BASEPATH}/Images/kttd2vwops5.png" /></td>
                             <td class="pro-code">LA321219900</td>
                             <td class="pro-name">AgroParts - Hız Sensörü</td>
@@ -73,19 +73,20 @@
                                 Gerekli açıklama buraya gelecek
                                 Gerekli açıklama buraya gelecek
                             </td>
-                        </tr>
+                        </tr>-->
+                        {DATA}
                     </tbody>
                 </table>
             </div>
         </div>
-        <div class="bank">
+        <!--<div class="bank">
             <div class="header">Banka Hesap Bilgilerimiz</div>
             <div class="content">
                 <span>AKBANK - Malkara Şubesi - Şube Kodu: 683 - Hesap No: 234325346 - IBAN: TR000000000000000000000000</span>
                 <span>GARANTİ - Malkara Şubesi - Şube Kodu: 683 - Hesap No: 234325346 - IBAN: TR000000000000000000000000</span>
                 <span>VAKIFBANK - Malkara Şubesi - Şube Kodu: 683 - Hesap No: 234325346 - IBAN: TR000000000000000000000000</span>
             </div>
-        </div>
+        </div>-->
         <div class="footer">
             <img class="logo" src="{PATH}\img/logo.png" alt="Daflan Bilişim" />
             <span class="desc">Bu form Daflan - Mikro Kaynak Yönetim Version: 0.3.3 kullanılarak üretilmiştir.</span>
