--- a/Muhasebe/View/OrderForm/index.html
+++ b/Muhasebe/View/OrderForm/index.html
@@ -13,8 +13,7 @@
             <img class="logo" src="{PATH}\img\celik.png" />
             <div class="company-tag">
                 <span>{COMPANY-NAME}</span>
-                <span>Vergi No: {TAXID}</span>
-                <span>Vergi Dairesi: {TAXPLACE}</span>
+                <span>Vergi No: {TAXID}, Vergi Dairesi: {TAXPLACE}</span>
                 <span>Adres: {ADDRESS} {DISTRICT}/{PROVINCE}</span>
                 <span>Tel: {TELEPHONE}</span>
                 <span>Email: {EMAIL}</span>
@@ -89,7 +88,7 @@
         </div>-->
         <div class="footer">
             <img class="logo" src="{PATH}\img/logo.png" alt="Daflan Bilişim" />
-            <span class="desc">Bu form Daflan - Mikro Kaynak Yönetim Version: 0.3.3 kullanılarak üretilmiştir.</span>
+            <span class="desc">Bu form Daflan - Mikro Kaynak Yönetim Version: 0.0.4.1 kullanılarak üretilmiştir.</span>
             <a class="link" href="http://www.daflan.com">www.daflan.com</a>
             <span class="copyright">Copyright © Daflan Bilişim 2016</span>
         </div>
