--- a/Muhasebe/View/AccountMovementsForm/index.html
+++ b/Muhasebe/View/AccountMovementsForm/index.html
@@ -45,7 +45,80 @@
                     <div class="price col">Tutar</div>
                     <div class="desc col">Açıklama</div>
                 </div>
+                <table>
+                    <tbody>
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Alacak Tahsilatı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
 
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Alacak Tahsilatı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Alacak Tahsilatı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Alacak Tahsilatı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Mal/Hizmet Satışı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
+                        <tr>
+                            <td colspan="7">
+                                <div class="columns sale">
+                                    <div class="order-code col">
+                                        Sipariş Kodu
+                                    </div>
+                                    <div class="name col">Ürün Adı</div>
+                                    <div class="amount col">Miktar</div>
+                                    <div class="base-price col">Birim</div>
+                                    <div class="total-price col">Toplam</div>
+                                </div>
+                            </td>
+                        </tr>
+
+                        <tr class="movement">
+                            <td class="id">1</td>
+                            <td class="mtype">Alacak Tahsilatı</td>
+                            <td class="date">22.07.2016</td>
+                            <td class="author">Mustafa YILDIZ</td>
+                            <td class="payment">Peşin</td>
+                            <td class="price">256.45 TL</td>
+                            <td class="desc">Elden ödeme alındı</td>
+                        </tr>
+                    </tbody>
+                </table>
+                
             </div>
         </div>
         <!--<div class="bank">
