--- a/Muhasebe/View/AccountMovementsForm/index.html
+++ b/Muhasebe/View/AccountMovementsForm/index.html
@@ -42,8 +42,8 @@
                     <div class="date col">Tarih</div>
                     <div class="author col">Sorumlu</div>
                     <div class="payment col">Ödeme Türü</div>
-                    <div class="price col">Tutar</div>
                     <div class="desc col">Açıklama</div>
+                    <div class="price col">Tutar</div>
                 </div>
                 <table>
                     <tbody>
@@ -53,36 +53,8 @@
                             <td class="date">22.07.2016</td>
                             <td class="author">Mustafa YILDIZ</td>
                             <td class="payment">Peşin</td>
-                            <td class="price">256.45 TL</td>
                             <td class="desc">Elden ödeme alındı</td>
-                        </tr>
-
-                        <tr class="movement">
-                            <td class="id">1</td>
-                            <td class="mtype">Alacak Tahsilatı</td>
-                            <td class="date">22.07.2016</td>
-                            <td class="author">Mustafa YILDIZ</td>
-                            <td class="payment">Peşin</td>
                             <td class="price">256.45 TL</td>
-                            <td class="desc">Elden ödeme alındı</td>
-                        </tr>
-                        <tr class="movement">
-                            <td class="id">1</td>
-                            <td class="mtype">Alacak Tahsilatı</td>
-                            <td class="date">22.07.2016</td>
-                            <td class="author">Mustafa YILDIZ</td>
-                            <td class="payment">Peşin</td>
-                            <td class="price">256.45 TL</td>
-                            <td class="desc">Elden ödeme alındı</td>
-                        </tr>
-                        <tr class="movement">
-                            <td class="id">1</td>
-                            <td class="mtype">Alacak Tahsilatı</td>
-                            <td class="date">22.07.2016</td>
-                            <td class="author">Mustafa YILDIZ</td>
-                            <td class="payment">Peşin</td>
-                            <td class="price">256.45 TL</td>
-                            <td class="desc">Elden ödeme alındı</td>
                         </tr>
                         <tr class="movement">
                             <td class="id">1</td>
@@ -90,8 +62,8 @@
                             <td class="date">22.07.2016</td>
                             <td class="author">Mustafa YILDIZ</td>
                             <td class="payment">Peşin</td>
-                            <td class="price">256.45 TL</td>
                             <td class="desc">Elden ödeme alındı</td>
+                            <td class="price">256.45 TL</td>
                         </tr>
                         <tr>
                             <td colspan="7">
@@ -104,17 +76,21 @@
                                     <div class="base-price col">Birim</div>
                                     <div class="total-price col">Toplam</div>
                                 </div>
+                                <div class="item">
+                                    <div class="order-code col">123235</div>
+                                    <div class="name col">AgroParts Hız Sensörü</div>
+                                    <div class="amount col">25 Adet</div>
+                                    <div class="base-price col">24.00 TL</div>
+                                    <div class="total-price col">254.00 TL</div>
+                                </div>
+                                <div class="item">
+                                    <div class="order-code col">123235</div>
+                                    <div class="name col">AgroParts Hız Sensörü</div>
+                                    <div class="amount col">25 Adet</div>
+                                    <div class="base-price col">24.00 TL</div>
+                                    <div class="total-price col">254.00 TL</div>
+                                </div>
                             </td>
-                        </tr>
-
-                        <tr class="movement">
-                            <td class="id">1</td>
-                            <td class="mtype">Alacak Tahsilatı</td>
-                            <td class="date">22.07.2016</td>
-                            <td class="author">Mustafa YILDIZ</td>
-                            <td class="payment">Peşin</td>
-                            <td class="price">256.45 TL</td>
-                            <td class="desc">Elden ödeme alındı</td>
                         </tr>
                     </tbody>
                 </table>
