--- a/Muhasebe/View/AccountMovementsForm/index.html
+++ b/Muhasebe/View/AccountMovementsForm/index.html
@@ -62,7 +62,7 @@
                             <td class="date">22.07.2016</td>
                             <td class="author">Mustafa YILDIZ</td>
                             <td class="payment">Peşin</td>
-                            <td class="desc">Elden ödeme alındı</td>
+                            <td class="desc">Elden ödeme alındı Elden ödeme alındı Elden ödeme alındı Elden ödeme alındı Elden ödeme alındı</td>
                             <td class="price">256.45 TL</td>
                         </tr>
                         <tr>
@@ -72,13 +72,13 @@
                                         Sipariş Kodu
                                     </div>
                                     <div class="name col">Ürün Adı</div>
-                                    <div class="amount col">Miktar</div>
+                                    <div class="amount col">Satılan</div>
                                     <div class="base-price col">Birim</div>
                                     <div class="total-price col">Toplam</div>
                                 </div>
                                 <div class="item">
                                     <div class="order-code col">123235</div>
-                                    <div class="name col">AgroParts Hız Sensörü</div>
+                                    <div class="name col">AgroParts Hız Sensörü AgroParts Hız Sensörü AgroParts Hız Sensörü AgroParts Hız Sensörü</div>
                                     <div class="amount col">25 Adet</div>
                                     <div class="base-price col">24.00 TL</div>
                                     <div class="total-price col">254.00 TL</div>
@@ -94,7 +94,14 @@
                         </tr>
                     </tbody>
                 </table>
-                
+
+                <div class="summary">
+                    <div class="header">Özet</div>
+                    <div class="content">
+                        <span>Yukarıdaki işlemler sonucunda firmamız size 165.24 TL borçludur.</span>
+                    </div>
+                </div>
+
             </div>
         </div>
         <!--<div class="bank">
