--- a/Muhasebe/View/AccountMovementsForm/index.html
+++ b/Muhasebe/View/AccountMovementsForm/index.html
@@ -98,7 +98,7 @@
                 <div class="summary">
                     <div class="header">Özet</div>
                     <div class="content">
-                        <span>Yukarıdaki işlemler sonucunda firmamız size 165.24 TL borçludur.</span>
+                        <span>Yukarıdaki işlemler sonucunda firmamız <strong>size 165.24 TL borçludur.</strong></span>
                     </div>
                 </div>
 
