--- a/Muhasebe/View/AccountMovementsForm/index.html
+++ b/Muhasebe/View/AccountMovementsForm/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <table>
                     <tbody>
-                        <tr class="movement">
+                        <!--<tr class="movement">
                             <td class="id">1</td>
                             <td class="mtype">Alacak Tahsilatı</td>
                             <td class="date">22.07.2016</td>
@@ -91,7 +91,8 @@
                                     <div class="total-price col">254.00 TL</div>
                                 </div>
                             </td>
-                        </tr>
+                        </tr>-->
+                        {DATA}
                     </tbody>
                 </table>
 
