Generate summary pdf gumping

--- a/Muhasebe/View/AccountSummaryForm/index.html
+++ b/Muhasebe/View/AccountSummaryForm/index.html
@@ -35,7 +35,7 @@
                 <span id="email">Email: <strong>{ACCOUNT-EMAIL}</strong></span>
             </div>
             <div class="movement-info">
-                <div class="movement-header">İşlemler</div>
+                <div class="movement-header">İşlemler {TIME-INTERVAL}</div>
                 <div class="columns">
                     <div class="id col">#</div>
                     <div class="movetype col">Hareket Türü</div>
