--- a/Muhasebe/View/OfferForm/index.html
+++ b/Muhasebe/View/OfferForm/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>{COMPANY-NAME} - Sipariş Formu</title>
+    <title>{COMPANY-NAME} - Teklif Formu</title>
     <link href="{PATH}\css\main.css" type="text/css" rel="stylesheet" />
     <link href="css/main.css" type="text/css" rel="stylesheet" />
 </head>
@@ -92,7 +92,7 @@
         </div>-->
         <div class="footer">
             <img class="logo" src="{PATH}\img/logo.png" alt="Daflan Bilişim" />
-            <span class="desc">Bu form Daflan - Mikro Kaynak Yönetim Version: 0.0.4.5 kullanılarak üretilmiştir.</span>
+            <span class="desc">Bu form Daflan - Mikro Kaynak Yönetim Version: 0.0.5.0 kullanılarak üretilmiştir.</span>
             <a class="link" href="http://www.daflan.com">www.daflan.com</a>
             <span class="copyright">Copyright © Daflan Bilişim 2016</span>
         </div>
